--- a/src/test/resources/ResourceStartedLastWeekTableTest1.html
+++ b/src/test/resources/ResourceStartedLastWeekTableTest1.html
@@ -2,7 +2,7 @@
     <table class="table table-hover table-bordered table-responsive">
         <thead>
         <th>Account</th>
-        <th>Resource Name</th>
+        <th>Product Name</th>
         <th>Resource Id</th>
         <th>Start Date</th>
         <th>Cost</th>
