--- a/src/test/resources/HtmlTableTest1.html
+++ b/src/test/resources/HtmlTableTest1.html
@@ -1,18 +1,22 @@
-<div style="overflow: scroll;">
-    <table class="table table-hover table-bordered table-responsive">
-        <thead>
-        <th>First name</th>
-        <th>Last name</th>
-        </thead>
-        <tbody>
-        <tr>
-            <td>John</td>
-            <td>Doe</td>
-        </tr>
-         <tr>
-            <td>Jane</td>
-            <td>Doe</td>
-        </tr>
-        </tbody>
-    </table>
+<div style=" font-family: 'arial'; ">
+    <div style=" overflow-x: auto; width: 75%; border: 1px solid #ddd; ">
+        <table style=" border-collapse: collapse; border-spacing: 0; width: 100%; ">
+            <thead>
+            <tr>
+                <th nowrap style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">First name</th>
+                <th nowrap style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Last name</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr style="background-color: #f2f2f2">
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">John</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Doe</td>
+            </tr>
+            <tr>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Jane</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Doe</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
