--- a/src/test/resources/ResourceStartedLastWeekTableTest1.html
+++ b/src/test/resources/ResourceStartedLastWeekTableTest1.html
@@ -1,32 +1,36 @@
-<div style="overflow: scroll;">
-    <table class="table table-hover table-bordered table-responsive">
-        <thead>
-        <th>Account</th>
-        <th>Product Name</th>
-        <th>Resource Id</th>
-        <th>Start Date</th>
-        <th>Cost</th>
-        </thead>
-        <tbody>
-        <tr>
-            <td>QA</td>
-            <td>Ec2</td>
-            <td>i-01def0a998e06c30e</td>
-            <td>2017-09-19</td>
-            <td>1000</td>
-        </tr>
-        <tr>
-            <td>Nova</td>
-            <td>Ec2</td>
-            <td>v-01def02344e06c30e</td>
-            <td>2017-09-20</td>
-            <td>1000</td>
-        </tr>
-        </tbody>
-        <tfoot>
-        <tr>
-            <td colspan="5">Total: 2000</td>
-        </tr>
-        </tfoot>
-    </table>
+<div style=" font-family: 'arial'; ">
+    <div style=" overflow-x: auto; width: 75%; border: 1px solid #ddd; ">
+        <table style=" border-collapse: collapse; border-spacing: 0; width: 100%; ">
+            <thead>
+            <tr>
+                <th nowrap style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Account</th>
+                <th nowrap style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Product Name</th>
+                <th nowrap style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Resource Id</th>
+                <th nowrap style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Start Date</th>
+                <th nowrap style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Cost</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr style="background-color: #f2f2f2">
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">QA</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Ec2</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">i-01def0a998e06c30e</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">2017-09-19</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">1000</td>
+            </tr>
+            <tr>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Nova</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">Ec2</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">v-01def02344e06c30e</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">2017-09-20</td>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; ">1000</td>
+            </tr>
+            </tbody>
+            <tfoot>
+            <tr>
+                <td style=" border: 1px solid #ddd; text-align: left; padding: 8px; " colspan="5">Total: 2000</td>
+            </tr>
+            </tfoot>
+        </table>
+    </div>
 </div>
